Fixed layouts and modified beacon switches
- Fixed layout issues with different window sizes
- Changed font style to be more consistent with the website
- Changed the look of the beacon switches

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -245,72 +245,98 @@ tr td {
 }
 
 
-/* 
-    Radio-like checkbox 
-    http://cssdeck.com/labs/css-checkbox-styles
-*/ 
-.beaconSwitchButton input[type=checkbox] {
+/*
+    Switches that Miro like better 
+*/
+
+.onOffSwitch input[type=checkbox]{
     visibility: hidden;
 }
 
-.beaconSwitchButton {
-    width: 22px;
-    height: 22px;
-    background: #ddd;
-    margin: 20px 20px;
-
-    border-radius: 100%;
-    position: relative;
-    -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.5);
-    -moz-box-shadow: 0px 1px 3px rgba(0,0,0,0.5);
-    box-shadow: 0px 1px 3px rgba(0,0,0,0.5);
-
-    float: left;
-}
-
-.beaconSwitchButton label {
-    display: block;
-    width: 18px;
-    height: 18px;
-    border-radius: 100px;
-
-    transition: all .3s ease;
-    cursor: pointer;
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    z-index: 1;
-
-    box-shadow:inset 0px 1px 3px rgba(0,0,0,0.5);
-}
-
-.beaconSwitchButton input[type=checkbox]:checked + label {
-    background: #26ca28;
-}
-
-.beaconSwitchButton input[type=checkbox]:not(:checked) + label {
-    background: #CC2900;
-}
 
 /* Positioning and fonts of the labels */
 .beaconNameLabel label{
     float: left;
     padding: 17px;
-    font-size: 20px;
     font-weight: 400;
 }
 
 .orgNameLabel label{
     float: left;
     padding: 17px;
-    font-size: 20px;
-    color: #8A8A5C;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 .tableHeaders{
     font-size:20px;
     color:#C0C0C0;
+    text-align: center;
+}
+
+/* 
+    Individual beacon switch  
+*/
+.beaconSwitch input[type=checkbox] {
+    visibility: hidden;
+}
+
+.beaconSwitch {
+    float: right;
+    width: 70px;
+    height: 24px;
+    background: white;
+    border: 1px solid #C4C7BE;
+    margin: 16px auto;
+    position: relative;
+}
+
+.beaconSwitch:after {
+    content: 'OFF';
+    font: 12px/26px Arial, sans-serif;
+    color: silver;
+    position: absolute;
+    right: 5px;
+    z-index: 0;
+    font-weight: bold;
+    text-shadow: 1px 1px 0px rgba(255,255,255,.15);
+}
+
+.beaconSwitch:before {
+    content: 'ON';
+    font: 12px/26px Arial, sans-serif;
+    color: #00bf00;
+    position: absolute;
+    left: 5px;
+    z-index: 0;
+    font-weight: bold;
+}
+
+.beaconSwitch label {
+    display: block;
+    width: 33px;
+    height: 20px;
+
+    -webkit-transition: all .4s ease;
+    -moz-transition: all .4s ease;
+    -o-transition: all .4s ease;
+    -ms-transition: all .4s ease;
+    transition: all .4s ease;
+    cursor: pointer;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    z-index: 1;
+
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
+    background: silver;
+
+}
+
+.beaconSwitch input[type=checkbox]:checked + label {
+    background: #26ca28;
+    left: 34px;
 }
 
 
@@ -376,7 +402,7 @@ tr td {
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
     -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
-    background: #fcfff4;
+    background: red;
 
 }
 
@@ -384,11 +410,10 @@ tr td {
     background: #26ca28;
     left: 43px;
 }
-
 #SwitchLabel{
     float: right;
-    color: silver;
-    font-size: 30px;
-    padding: 15px;
+    color: rgb(71, 71, 71);
+    font-size: 20px;
+    padding: 22px;
 
 }
